initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-ex
spec:
  containers:
    - name: nginx
      image: nginx
