pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx-prod
  namespace: production
spec:
  containers:
  - image: nginx
    name: nginx
    resources: 
      requests:
        memory: "64Mi"
        cpu: "500m"
      limits:
        memory: "70Mi"
        cpu: "750m"
