sec.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx-pod
spec:
  securityContext:
    runAsNonRoot: true
  containers:
  - image: nginx
    name: nginx
