sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: sidecar
  name: sidecar-prod
spec:
  volumes:
    - name: logs
      emptyDir: {}

  containers:
    - image: busybox
      name: app
      command: 
        - "/bin/sh"
      args:
        - "-c"
        - "while true; do date >> /var/log/date.txt; sleep 10;done"
      volumeMounts:
        - name: logs
          mountPath :  /var/log

    - image: centos/httpd
      name: sidecar
      ports:
        - containerPort: 80
      volumeMounts:
        - name: logs
          mountPath :  /var/www/html
